Fix the text not showing up

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -10,6 +10,7 @@ body {
   overflow: hidden;
   user-select: none;
   background-color: #fff;
+  color: #1b1b1f;
 }
 
 #root {
